day6/Simple-fanout-configuration/fanout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-1-service
spec:
  type: LoadBalancer
  selector:
    app: app-1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-2-service
spec:
  type: LoadBalancer
  selector:
    app: app-2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
